# Simorgh-Flight-Software

./: CMakeLists.txt  LICENSE  Makefile  README.md  Simorgh Flight Software.docx
config/: tle.txt
examples/: demo_slew.cpp
include/simorgh/: adcs_system.hpp  attitude_controller.hpp  attitude_estimator.hpp  quaternion.hpp  spacecraft_dynamics.hpp
src/: adcs_system.cpp  attitude_controller.cpp  attitude_estimator.cpp  simorgh.h  simorgh_main.c  spacecraft_dynamics.cpp
tests/: test_simorgh.cpp
